<resources>
    <string name="app_name">top-news</string>
    <string name="info">登录后,有更多精彩内容等着你！</string>
    <string name="search">搜索</string>
    <string name="search_news">请输入需要搜索的新闻</string>
    <string name="search_app">请输入需要搜索的app</string>
    <string name="like">收藏</string>
    <string name="message">消息</string>
    <string name="app">应用</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="title">今日头条</string>
    <string name="toutiao">头条</string>
    <string name="shehui">社会</string>
    <string name="guonei">国内</string>
    <string name="guoji">国际</string>
    <string name="yule">娱乐</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码</string>
    <string name="username">用户名</string>
    <string name="hintPhone">请输入手机号</string>
    <string name="hintPassword">请输入密码</string>
    <string name="password">密  码</string>
    <string name="phone">手机号</string>
    <string name="logout">注销</string>
    <string name="down">上拉加载更多</string>
    <string name="up">下拉完成刷新</string>
    <string name="loose">松开即将刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="download">下载</string>
    <string name="stars">评分</string>
    <string name="base">【基本信息】</string>
    <string name="sorry">抱歉，暂无详细信息</string>
    <string name="clean">清理缓存</string>
    <string name="version">当前版本</string>
    <string name="first_version">1.1.1</string>
    <string name="downManager">下载管理</string>
    <string name="userManager">账号管理</string>
    <string name="about">关于作者</string>
    <string name="signature">个性签名</string>
    <string name="nickname">昵称</string>
    <string name="changePass">修改密码</string>
    <string name="quit">退出登录</string>
    <string name="signature_test">这家伙很懒，都不想BB。</string>
    <string name="nick_test">我的灵性有一百</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="newPass">新密码</string>
    <string name="surePass">确认密码</string>
    <string name="input">input you want</string>
    <string name="resume">个人简介:</string>
    <string name="resumeDetail">大三开始自学安卓，希望获得一份相关的工作，有意者请联系。</string>
    <string name="blog">个人博客:</string>
    <string name="blogDetail">http://blog.csdn.net/hold_bin</string>
    <string name="qq">qq:</string>
    <string name="qqDetail">236490794</string>
    <string name="email">个人邮箱</string>
    <string name="emailDetail">236490794@qq.com</string>
    <string name="github">github地址:</string>
    <string name="githubDetail">https://github.com/qianbin01</string>
    <string name="chat">聊天</string>
    <string name="contact">通讯录</string>
    <string name="system">系统通知</string>
    <string name="opinion">我的意见</string>
    <string name="question">常见问题</string>
    <string name="my_opinion">期待你的意见反馈</string>
    <string name="question1">问:我喜欢/不喜欢A类文章，我可以多点几下赞/踩吗?</string>
    <string name="answer1">答:你好，我们设定为每个用户对每篇文章只可分别进行10次赞和踩的操作，防止一些用户的不良操作，带来的不便敬请谅解。</string>
    <string name="question2">问:我的头条app不可以刷新加载怎么办?</string>
    <string name="answer2">答:你好，一般这种问题都是由于网络下载造成，本app采用聚合公开的api开发，也可能是一段时间内提供的新闻只有这么多，抱歉。</string>
    <string name="question3">问:如何分享文件到微博/QQ?</string>
    <string name="answer3">答:目前版本正在调试中，预计会在下个版本中加入。</string>
    <string name="question4">问:接下来的版本更新中会加入什么功能？</string>
    <string name="answer4">答:接下来将加入视频播放，第三方软件分享，商城，邀请好友等功能，敬请期待!</string>
    <string name="question5">问:如何联系你们？</string>
    <string name="answer5">答:在设置选项卡中，关于作者，就能获得作者的相关信息</string>

</resources>
