<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FF0000">

        <ImageView
            android:id="@+id/ivItem"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:background="@drawable/item" />

        <qb.com.top_news.view.CircleImageView
            android:id="@+id/ivHead"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/head" />

        <TextView
            android:id="@+id/today_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/ivRefresh"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/today_title"
            android:src="@drawable/refresh" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="initEvent"
            android:text="@string/toutiao"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/shehui"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="initEvent"
            android:text="@string/shehui"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/guonei"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="initEvent"
            android:text="@string/guonei"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/guoji"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="initEvent"
            android:text="@string/guoji"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/yule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="initEvent"
            android:text="@string/yule"
            android:textSize="25sp" />
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/mViewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </android.support.v4.view.ViewPager>
</LinearLayout>
