<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FF0000">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/phoneLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:src="@drawable/phone" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="6"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hintPhone"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passLL"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneLL"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:src="@drawable/password" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="6"
            android:background="@drawable/bg_edittext"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@id/top_layout"
        android:layout_below="@id/passLL"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textColor="#ffffff" />
</RelativeLayout>