<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ff0000">

        <qb.com.top_news.view.CircleImageView
            android:id="@+id/ivHead"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/head" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#ffffff"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/rlCache"
            android:background="@drawable/layout_line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/clean"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:textSize="16sp" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/rlVersion"
            android:background="@drawable/layout_line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/version"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="@string/first_version"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/rlDownload"
            android:background="@drawable/layout_line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/downManager"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivDownload"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/rarrow1" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/rlUser"
            android:background="@drawable/layout_line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/userManager"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivUser"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/rarrow1" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/rlAbout"
            android:background="@drawable/layout_line"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/about"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivAbout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/rarrow1" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>